Removed unnecessary trace logs

--- a/auth-stub-http/src/test/resources/log4j.properties
+++ b/auth-stub-http/src/test/resources/log4j.properties
@@ -4,9 +4,13 @@ log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.layout=org.apache.log4j.EnhancedPatternLayout
 log4j.appender.CONSOLE.layout.ConversionPattern=%-5p %t %C{1}.%M(): %m%n
 log4j.appender.CONSOLE.follow=true
-log4j.appender.CONSOLE.threshold=error
+log4j.appender.CONSOLE.threshold=trace
 
 log4j.appender.NULL=org.apache.log4j.varia.NullAppender
 log4j.appender.NULL.threshold=trace
 
-log4j.logger.wiremock.org.eclipse.jetty.util.thread.QueuedThreadPool=error
+log4j.logger.wiremock=error
+log4j.logger.io=error
+log4j.logger.org=error
+log4j.logger.com=error
+log4j.logger.au.com.williamhill=trace
