--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -1,14 +1,14 @@
-log4j.rootCategory=warn, CONSOLE, NULL
+log4j.rootCategory=info, CONSOLE, NULL
 
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.layout=org.apache.log4j.EnhancedPatternLayout
 log4j.appender.CONSOLE.layout.ConversionPattern=%-5p %t %C{1}.%M(): %m%n
-log4j.appender.CONSOLE.threshold=warn
+log4j.appender.CONSOLE.threshold=info
 
 log4j.appender.NULL=org.apache.log4j.varia.NullAppender
 log4j.appender.NULL.threshold=trace
 
-log4j.logger.io=warn
-log4j.logger.org=warn
-log4j.logger.com=warn
-log4j.logger.au.com.williamhill=warn
+log4j.logger.io=info
+log4j.logger.org=info
+log4j.logger.com=info
+log4j.logger.au.com.williamhill=info
