--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -11,4 +11,4 @@ log4j.appender.NULL.threshold=trace
 log4j.logger.io=info
 log4j.logger.org=info
 log4j.logger.com=info
-log4j.logger.au.com.williamhill=warn
+log4j.logger.au.com.williamhill=trace
