--- a/backplane-kafka/build.gradle
+++ b/backplane-kafka/build.gradle
@@ -2,6 +2,7 @@ def packageName = 'flywheel-backplane-kafka'
 version = project(':').version
 
 dependencies {
+  compile 'com.obsidiandynamics.fulcrum:fulcrum-docker-compose:0.3.0'
   compile 'org.apache.kafka:kafka-clients:0.11.0.0'
 }
 
