--- a/wha/conf/wha/log4j-wha.properties
+++ b/wha/conf/wha/log4j-wha.properties
@@ -12,7 +12,7 @@ log4j.appender.FILE.maxBackupIndex=9
 log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
 log4j.appender.FILE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %t %C{1}.%M():%L %m%n
 
-log4j.appender.SPLUNK=au.com.williamhill.flywheel.logging.SplunkHECAppender
+log4j.appender.SPLUNK=com.obsidiandynamics.log4jextras.splunk.SplunkHECAppender
 log4j.appender.SPLUNK.index=platform_flywheel_dev
 log4j.appender.SPLUNK.source=platform_flywheel_dev
 log4j.appender.SPLUNK.batchMode=true
@@ -22,7 +22,7 @@ log4j.appender.SPLUNK.maxInactiveTimeBeforeBatchFlush=1000
 log4j.appender.SPLUNK.maxQueueSize=10MB
 log4j.appender.SPLUNK.dropEventsOnQueueFull=true
 log4j.appender.SPLUNK.sourcetype=hec
-log4j.appender.SPLUNK.layout=au.com.williamhill.flywheel.logging.JsonLayout
+log4j.appender.SPLUNK.layout=com.obsidiandynamics.log4jextras.json.JsonLayout
 log4j.appender.SPLUNK.layout.mdcRoot=root
 
 log4j.logger.com.obsidiandynamics.indigo=warn
