--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,9 @@ allprojects {
   apply plugin: 'maven-publish'
   apply plugin: 'com.jfrog.bintray'
 
+  sourceCompatibility = 1.8
+  targetCompatibility = 1.8
+
   repositories {
     jcenter()
     maven {
@@ -18,7 +21,7 @@ allprojects {
   }
 
   jacoco {
-    toolVersion = '0.7.10-SNAPSHOT'
+    toolVersion = '0.8.1'
   }
 
   jacocoTestReport {
@@ -42,7 +45,7 @@ allprojects {
     testCompile 'com.obsidiandynamics.fulcrum:fulcrum-assert:0.3.0'
     testCompile 'com.obsidiandynamics.fulcrum:fulcrum-junit:0.3.0'
     testCompile 'junit:junit:4.12'
-    testCompile 'org.mockito:mockito-core:2.9.0'
+    testCompile "org.mockito:mockito-core:2.18.0"
     testCompile 'org.hamcrest:hamcrest-library:1.3'
     
     testRuntime 'org.slf4j:slf4j-log4j12:1.7.25'
